fix: contain sphere canvas to intro section (position:relative + overflow:hidden)

--- a/portfolio-master/portfolio-master/app/routes/home/intro.module.css
+++ b/portfolio-master/portfolio-master/app/routes/home/intro.module.css
@@ -4,6 +4,8 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  position: relative;
+  overflow: hidden;
 }
 
 .text {
